--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
     stages {
         stage('Clone Project') {
             steps {
-                git branch:'qa', url: 'https://github.com/ErnestoJuarez2708/isc-system-web.git'
+                git branch: 'qa', url: 'https://github.com/ErnestoJuarez2708/isc-system-web.git'
             }
         }
         stage('Install Dependencies') {
@@ -15,14 +15,19 @@ pipeline {
                 sh 'yarn install'
             }
         }
-        stage('Intall Cypress') {
+        stage('Install Cypress') {
             steps {
                 sh 'yarn add cypress --dev'
             }
         }
-        stage('Intall Run e2e') {
+        stage('Install Xvfb and Dependencies') {
             steps {
-                sh 'npx cypress run'
+                sh 'apt-get update && apt-get install -y xvfb libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 libx11-xcb1'
+            }
+        }
+        stage('Run e2e Tests') {
+            steps {
+                sh 'xvfb-run --auto-servernum -- npx cypress run'
             }
         }
     }
